Fix alignment of checkbox in permissions dropdown

--- a/app/stylesheets/shell-window/toolbar-dropdown.less
+++ b/app/stylesheets/shell-window/toolbar-dropdown.less
@@ -314,6 +314,7 @@
 
     input {
       height: auto;
+      margin: 0;
       margin-left: auto;
     }
   }
